@@ -6868,3 +6868,4 @@ v0.92.0.11:
   - Fix /ta reload all reloading config/lang twice, courtesy of Warriorrrr with PR #5389.
   - Only compile pushes for master, courtesy of Warriorrrr with PR #5390.
   - Fix loading order of databaseconfig and config, fixing the config's database section conversion.
+  - Fix towny.claimed.townowned.* node not being tested for.
